Error with whitespace resolved

--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -1,10 +1,10 @@
 body {
-  background: white url('/images/markus-spiske.jpg');
+  background: grey url('/images/markus-spiske.jpg');
   background-size: 100%;
   background-repeat: no-repeat;
   font-family: 'Lato', sans-serif;
   padding: 0px;
-  margin: 0px;
+  margin: 20px;
 }
 
 nav {
